fixing poster container and layout on mobile

--- a/style.css
+++ b/style.css
@@ -147,41 +147,33 @@ sup {
   padding-top: 1rem;
 }
 
-#poster-board {
-  width: 70vw;
-  height: 40vw;
-  margin-left: 15%;
-  margin-top: calc((100vh - 40vw) / 2);
-  background-repeat: repeat;
-  background-size: 20%;
+#poster-board-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;  
+  justify-content: center;
+  align-items: center;
 }
 
-#new-current-poster {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+#poster-board {
+ margin: 0;
+ position:fixed;
+ display: flex;
+ flex-wrap: wrap;
+ width: 75vw; /*this has to be 5 times newcurrentposter width */
+ 
+}
+
+.new-current-poster {
+width: 20%;
+height: auto;
+object-fit: cover;
+
 }
 
 
 
 /* MEDIA RESPONSIVE */
-
-@media (max-width: 800px) {
-  * {
-    font-size: 1.05rem;
-    line-height: 120%;
-  }
-
-
-  #current-poster {
-    width: 15rem;
-  }
-
- 
-
-}
-
 @media (max-width: 700px) {
   
   #header {
@@ -196,13 +188,12 @@ sup {
     height: auto!important; 
   }
 
+
+
   #poster-board {
-    transform: rotate(90deg);
-    width: 105vw;
-    height: 60vw;
-    /* margin-top: calc((100vh - 60vw) / 2); */
-    margin-left: -2.5vw;
-  }
+    transform: rotate(90deg); 
+    width: 80%; 
+   }
 
   .text-container {
     height: fit-content;
@@ -210,29 +201,21 @@ sup {
 
   .current-text, .about-text {
     padding-left: 1rem;
+    padding-right: 1rem;
   }
 
 
 }
 
-@media (max-width: 561px) {
- 
 
-
-
-}
 
 @media (max-width: 331px) {
-  * {
-    font-size: 1rem;
-  }
+ 
   .mobile-line-break {
     display: flex;
   }
 
-  .text-column {
-    padding-top: 2rem;
-  }
+  
 }
 
 /* "The classroom with all its limitations remains a location of possibility."
